added comment endpoints and implementations
